[package]
name = "mempool_template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
clap = {version = "4", features = ["derive"]}
eyre = "0.6.8"
futures = "0.3"
futures-util = "0.3"

alloy-provider = { version = "0.2", features = ["ws"] }
alloy-rpc-client = { version = "0.2", features = ["ws"] }